# fujida_api

./: Dockerfile  actual.csv  alembic.ini  docker-compose.yaml  faq.csv  pyproject.toml  regular.csv  regular_csv.csv
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 02e246978da6_initial_schema.py
app/fujida_api/: config.py  main.py
app/fujida_api/admin/: admin.py
app/fujida_api/admin/templates/: admin.py
app/fujida_api/admin/templates/admin/: admin.html
app/fujida_api/db/: models.py  session.py
app/fujida_api/middlewares/: admin_auth.py
app/fujida_api/routes/: __init__.py  compare.py  faq.py  search.py
app/fujida_api/schemas/: compare.py  search.py
app/fujida_api/services/: compare_service.py  faq_service.py  search_service.py
app/fujida_api/utils/: generate_embeddings.py  generate_faq_embeddings.py  import_devices.py  import_faq.py  import_regular.py  update_model_flags.py
