[project]
name = "fujida-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Elisey",email = "eliseyblajen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]

[tool.poetry]
packages = [{include = "fujida_api", from = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
